12. Fix drag'n'drop in grid view not showing drag thumbnail.
13. Allow genre images to be PNG files.
14. Add (initial) support for playlist images - need to manually add
    "playlistImages: '1'" to 'prefs/plugin/material-skin.prefs'. Images need to
    be in 'prefs/material-skin/playlists/' - and have same name requiresments
    as per genre images.

5.8.1
-----
1. Allow specifying left/right window drag areas via 'dragleft' and
   'dragright' URL query parameters.
2. Add 'tbarBtnsPos' to specify window titlebar button position; 'l' for left,
   'r' for right, anything else to hide display.
3. Add 'tbarBtnsStyle' to specify window titlebar button style; 'mac', win',
   'gnome' (default).
4. Fix long-press of queue time to show transfer dialog.
5. Leave ARTIST_ROLES roles in Release Type section(s) - thanks to Darrell. 

5.8.0
-----
 1. Add a server-side option to use 'Default' skin for server settings, either
    embedded in Material or a new tab/window.
 2. Add a server-side option to enable track grouping.
 3. Move save/restore defaults buttons from toolbar to bottom of 'Interface'
    settings dialog.
 4. Better(?) multi-group icon.
 5. Reduce font size by 1px.
 6. Use configured font size in settings pages.
 7. Re-order: band, conductor, composer.
 8. Monitor more LMS settings for changes (e.g. MAI artist images).
 9. Add option to use list/grid setting globally and not per-view.
10. Don't add user-defined roles entries for 'Various Artists'.
11. List local file links under tracks in MAI album view.
12. Make 'http' and 'https' links within comments clickable in MAI view.
13. Limit works advanced search to discovered albums - thanks to Darrell.
14. Ensure only 1 'serverstatus' at a time.
15. Use simpler custom API to poll scan progress to reduce load on LMS.
16. In 'Information' dialog only poll 'serverstatus' every 6 seconds.
17. When checking whether to use '/imageproxy' check if URL starts with 'http'
    or 'https', not just if URL contains one of those.